[gd_scene load_steps=4 format=3 uid="uid://cpvfe5rlw5amn"]

[ext_resource type="Script" path="res://hit_scene.gd" id="1_rsmdo"]
[ext_resource type="PackedScene" uid="uid://bq2ybmfqw0fgu" path="res://gerimon.tscn" id="2_q8w3c"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_bexld"]
size = Vector2(600, 20)

[node name="Node2D" type="Node2D"]
script = ExtResource("1_rsmdo")
gerimon_scene = ExtResource("2_q8w3c")

[node name="StaticBody2D" type="StaticBody2D" parent="."]
position = Vector2(300, 400)

[node name="CollisionShape2D" type="CollisionShape2D" parent="StaticBody2D"]
shape = SubResource("RectangleShape2D_bexld")

[node name="BodyAttacker" parent="." instance=ExtResource("2_q8w3c")]
position = Vector2(104, 326)

[node name="BodyVictim" parent="." instance=ExtResource("2_q8w3c")]
position = Vector2(153, 326)

[node name="HeadAttacker" parent="." instance=ExtResource("2_q8w3c")]
position = Vector2(279, 325)

[node name="HeadVictim" parent="." instance=ExtResource("2_q8w3c")]
position = Vector2(309, 325)

[connection signal="hit_success" from="BodyVictim" to="." method="_on_hit"]
[connection signal="hit_success" from="HeadVictim" to="." method="_on_hit"]
